--- a/.github/ISSUE_TEMPLATE/enhancement.yml
+++ b/.github/ISSUE_TEMPLATE/enhancement.yml
@@ -1,4 +1,4 @@
-name: Enhancement
+name: Enhancement Suggestion
 description: Melde einen Verbesserungsvorschlag, eine mögliche Erweiterung, eine fehlende Funktion etc.
 title: "[ENHANCEMENT]: "
 labels:
